# BoyerPlanarityTest

./: CMakeLists.txt  graph.h  graphEmbed.c  graphIO.c  graphPreprocess.c  graphStructure.c  maxPlanar5.txt  planarity.c
